# Tube-Segmentation-Framework

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  commons.cpp  commons.hpp  eigenanalysisOfHessian.cpp  eigenanalysisOfHessian.hpp  globalCenterlineExtraction.cpp  globalCenterlineExtraction.hpp  gradientVectorFlow.cpp  gradientVectorFlow.hpp  histogram-pyramids.cpp  histogram-pyramids.hpp  inputOutput.cpp  inputOutput.hpp  kernels.cl  kernels_no_3d_write.cl  main.cpp  parallelCenterlineExtraction.cpp  parallelCenterlineExtraction.hpp  parameters.cpp  parameters.hpp  ridgeTraversalCenterlineExtraction.cpp  ridgeTraversalCenterlineExtraction.hpp  segmentation.cpp  segmentation.hpp  timing.hpp  tube-segmentation.cpp  tube-segmentation.hpp  tubeDetectionFilters.cpp  tubeDetectionFilters.hpp
CMake/: TSFConfig.cmake.in  TSFUse.cmake  Tube-Segmentation-FrameworkConfig.cmake.in  Tube-Segmentation-FrameworkUse.cmake  tsf-config.h.in  tsfInitializeLibraries.cmake
parameters/: parameters
parameters/centerline-gpu/: AAA-Phantom-CT  AAA-Vessels-CT  Liver-CT  Liver-Vessels-CT  Liver-Vessels-MR  Lung-Airways-CT  Neuro-Vessels-MRA  Neuro-Vessels-USA  Synthetic-Vascusynth  airway  mr-angio  us-accuracy  vascusynth
parameters/centerline-ridge/: Lung-Airways-CT  Neuro-Vessels-MRA  Neuro-Vessels-USA  Synthetic-Vascusynth  airway  vascusynth
parameters/centerline-test/: Lung-Airways-CT  Lung-Vessels-CT  Neuro-Vessels-MRA  airway  mr-angio  us-doppler
tests/: CMakeLists.txt  TSFOutputTests.cpp  clinicalTests.cpp  parameterTests.cpp  tests.cpp  tests.hpp  tubeSegmentationTests.cpp  tubeValidation.cpp
tests/data/synthetic/dataset_1/: noisy0.raw  original.raw  real_centerline.mhd  real_centerline.raw
tests/data/synthetic/dataset_2/: centerline.raw  noisy.mhd  noisy0.raw  original.mhd  original.raw
tests/data/synthetic/dataset_3/: centerline.raw  noisy0.raw  original.raw  real_centerline.mhd
tests/data/synthetic/dataset_4/: original.mhd  original.raw
